--- a/backend/package.json
+++ b/backend/package.json
@@ -3,14 +3,17 @@
   "version": "1.0.0",
   "description": "This is the tomato food delivery app backend.",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev" : "nodemon -r dotenv/config --experimental-json-modules ./src/index.js"
   },
   "author": "Muhammad Hamza Aamir",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.4"
   },
   "devDependencies": {
